--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
         <version>0.32.3</version>
     </dependency>
     
+    <dependency>
+        <groupId>com.mashape.unirest</groupId>
+        <artifactId>unirest-java</artifactId>
+        <version>1.4.6</version>
+    </dependency>
+    
   </dependencies>
   
   <build>
