--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,6 @@
   </properties>
   
   <repositories>
-    <repository>
-        <id>biojava-maven-repo</id>
-        <name>BioJava repository</name>
-        <url>http://www.biojava.org/download/maven/</url>			
-    </repository>
   </repositories>
 
   <dependencies>
@@ -75,7 +70,8 @@
     <dependency> 
         <groupId>org.codehaus.groovy</groupId> 
         <artifactId>groovy-all</artifactId> 
-        <version>2.1.8</version> 
+        <version>2.5.7</version>
+        <type>pom</type> 
     </dependency>
     
     <dependency>
@@ -147,7 +143,7 @@
         <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
             <!-- 2.8.0-01 and later require maven-compiler-plugin 3.1 or higher -->
-            <version>3.1</version>
+            <version>3.8.1</version>
             <configuration>
               <compilerId>groovy-eclipse-compiler</compilerId>
               <!-- set verbose to be true if you want lots of uninteresting messages -->
@@ -157,16 +153,13 @@
               <dependency>
                 <groupId>org.codehaus.groovy</groupId>
                 <artifactId>groovy-eclipse-compiler</artifactId>
-                <version>2.8.0-01</version>
+                <version>3.3.0-01</version>
               </dependency>
               <!-- for 2.8.0-01 and later you must have an explicit dependency on groovy-eclipse-batch -->
               <dependency>
                 <groupId>org.codehaus.groovy</groupId>
                 <artifactId>groovy-eclipse-batch</artifactId>
-                <version>2.1.8-01</version>
-                <!-- or choose a different compiler version -->
-                <!-- <version>1.8.6-01</version> -->
-                <!-- <version>1.7.10-06</version> -->
+                <version>2.5.7-01</version>
               </dependency>
             </dependencies>
         </plugin>
